// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rewards Dialog when there are no rewards displays no rewards dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-26"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-28 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthXl-15 makeStyles-bigDialog-2 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-55 MuiPaper-rounded-29"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-79 makeStyles-title-56"
        >
          <h6
            class="MuiTypography-root-80 makeStyles-titleText-57 MuiTypography-h6-90"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-119 MuiIconButton-root-110 makeStyles-closeButton-63"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-118"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-122"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-276"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-131 makeStyles-content-58"
        >
          <div
            class="MuiGrid-root-133 makeStyles-contentGrid-75 MuiGrid-container-134 MuiGrid-spacing-xs-8-163"
          >
            <div
              class="MuiGrid-root-133 MuiGrid-item-135 MuiGrid-grid-xs-12-179 MuiGrid-grid-sm-4-185"
            >
              <div
                class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-direction-xs-column-137"
              >
                <div
                  class="makeStyles-noRewardsAmount-74"
                >
                  <img
                    alt="rewards icon"
                    class="makeStyles-rewardsIcon-73"
                    src="/assets/icons/rewards-gift.svg"
                  />
                  <div
                    class="MuiBox-root-238 MuiBox-root-239"
                  >
                    <h6
                      class="MuiTypography-root-80 makeStyles-titleText-57 MuiTypography-h6-90"
                    >
                      0
                    </h6>
                  </div>
                </div>
                <p
                  class="MuiTypography-root-80 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                >
                  No rewards available.
                </p>
              </div>
            </div>
            <div
              class="MuiGrid-root-133 MuiGrid-item-135 MuiGrid-grid-xs-12-179 MuiGrid-grid-sm-8-189"
            >
              <div
                class="MuiGrid-root-133 makeStyles-moreRewardsSection-65"
              >
                <div
                  class="MuiGrid-root-133 makeStyles-moreRewardsInformation-66 MuiGrid-container-134 MuiGrid-direction-xs-column-137"
                >
                  <div
                    class="MuiGrid-root-133 MuiGrid-item-135"
                  >
                    <h6
                      class="MuiTypography-root-80 makeStyles-titleText-57 MuiTypography-h6-90"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-moreRewardsDescription-67 MuiGrid-item-135"
                  >
                    <p
                      class="MuiTypography-root-80 MuiTypography-body2-81"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-rewardsGuideLinkContainer-69 MuiGrid-item-135"
                  >
                    <a
                      class="MuiTypography-root-80 MuiLink-root-241 MuiLink-underlineHover-243 makeStyles-rewardsGuide-70 MuiTypography-colorPrimary-103"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-boostRewards-68 MuiGrid-item-135"
                  >
                    <button
                      class="MuiButtonBase-root-119 MuiButton-root-247 MuiButton-contained-255 MuiButton-containedPrimary-256 MuiButton-fullWidth-270"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-248"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-276"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Dialog when there are no rewards displays zero amount in rewards button 1`] = `
<div
  aria-hidden="true"
/>
`;

exports[`Rewards Dialog when there are rewards can display user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-26"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Rewards User Guide"
        aria-labelledby="user-guide"
        class="MuiPaper-root-28 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthXl-15 makeStyles-bigDialog-2 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-55 MuiPaper-rounded-29"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-79 makeStyles-title-323"
        >
          <div
            class="MuiBox-root-254 MuiBox-root-333"
          >
            <button
              aria-label="exit guide mode"
              class="MuiButtonBase-root-119 MuiIconButton-root-110 makeStyles-arrowBack-325"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-118"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-122 MuiSvgIcon-fontSizeInherit-128"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17.51 3.87L15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-334"
              />
            </button>
            <h6
              class="MuiTypography-root-80 makeStyles-boldWeight-329 MuiTypography-h6-90"
            >
              Rewards User Guide
            </h6>
          </div>
        </div>
        <div
          class="MuiDialogContent-root-131 makeStyles-content-324"
        >
          <div
            class="MuiGrid-root-133 MuiGrid-container-134"
          >
            <div
              class="MuiGrid-root-133 MuiGrid-item-135"
            >
              <ul
                class="makeStyles-rewardsOptions-328"
              >
                <li>
                  <p
                    class="MuiTypography-root-80 MuiTypography-body2-81"
                  >
                    Staking 50% non native tokens
                  </p>
                </li>
                <li>
                  <p
                    class="MuiTypography-root-80 MuiTypography-body2-81"
                  >
                    Holding and/or Staking 50% BadgerDAO tokens
                  </p>
                </li>
              </ul>
            </div>
            <div
              class="MuiGrid-root-133 makeStyles-tokensSection-331 MuiGrid-container-134 MuiGrid-item-135 MuiGrid-direction-xs-column-137 MuiGrid-grid-xs-12-179"
            >
              <div
                class="MuiGrid-root-133 MuiGrid-item-135"
              >
                <h6
                  class="MuiTypography-root-80 MuiTypography-subtitle2-92"
                >
                  Badger has 3 types of tokens:
                </h6>
              </div>
              <div
                class="MuiGrid-root-133 makeStyles-userGuideTokens-326 MuiGrid-container-134 MuiGrid-spacing-xs-4-159"
              >
                <div
                  class="MuiGrid-root-133 MuiGrid-item-135"
                >
                  <div
                    class="MuiGrid-root-133 makeStyles-userGuideToken-327 MuiGrid-container-134 MuiGrid-direction-xs-column-137"
                  >
                    <div
                      class="MuiGrid-root-133 MuiGrid-item-135"
                    >
                      <p
                        class="MuiTypography-root-80 makeStyles-tokenName-330 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                      >
                        BADGERDAO TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-133 MuiGrid-item-135"
                    >
                      <h6
                        class="MuiTypography-root-80 MuiTypography-subtitle2-92"
                      >
                        Badger, Digg
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-item-135 MuiGrid-direction-xs-column-reverse-138 MuiGrid-grid-xs-true-167"
                    >
                      <button
                        aria-label="view badger dao tokens"
                        class="MuiButtonBase-root-119 MuiButton-root-278 MuiButton-text-280 makeStyles-viewVaultsButton-332 MuiButton-textPrimary-281 MuiButton-textSizeSmall-293 MuiButton-sizeSmall-299"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-279"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-122 MuiSvgIcon-colorPrimary-123"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-80 MuiTypography-subtitle2-92"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-334"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-133 MuiGrid-item-135"
                >
                  <div
                    class="MuiGrid-root-133 makeStyles-userGuideToken-327 MuiGrid-container-134 MuiGrid-item-135 MuiGrid-direction-xs-column-137"
                  >
                    <div
                      class="MuiGrid-root-133 MuiGrid-item-135"
                    >
                      <p
                        class="MuiTypography-root-80 makeStyles-tokenName-330 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                      >
                        BOOSTED TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-133 MuiGrid-item-135"
                    >
                      <h6
                        class="MuiTypography-root-80 MuiTypography-subtitle2-92"
                      />
                    </div>
                    <div
                      class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-item-135 MuiGrid-direction-xs-column-reverse-138 MuiGrid-grid-xs-true-167"
                    >
                      <button
                        aria-label="view boosted tokens"
                        class="MuiButtonBase-root-119 MuiButton-root-278 MuiButton-text-280 makeStyles-viewVaultsButton-332 MuiButton-textPrimary-281 MuiButton-textSizeSmall-293 MuiButton-sizeSmall-299"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-279"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-122 MuiSvgIcon-colorPrimary-123"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-80 MuiTypography-subtitle2-92"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-334"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-133 MuiGrid-item-135"
                >
                  <div
                    class="MuiGrid-root-133 makeStyles-userGuideToken-327 MuiGrid-container-134 MuiGrid-item-135 MuiGrid-direction-xs-column-137"
                  >
                    <div
                      class="MuiGrid-root-133 MuiGrid-item-135"
                    >
                      <p
                        class="MuiTypography-root-80 makeStyles-tokenName-330 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                      >
                        NON-BOOSTED TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-133 MuiGrid-item-135"
                    >
                      <h6
                        class="MuiTypography-root-80 MuiTypography-subtitle2-92"
                      >
                        All other tokens (e.g. 
                        Test Token, Test Token
                        ...)
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-item-135 MuiGrid-direction-xs-column-reverse-138 MuiGrid-grid-xs-true-167"
                    >
                      <button
                        aria-label="view non-boosted tokens"
                        class="MuiButtonBase-root-119 MuiButton-root-278 MuiButton-text-280 makeStyles-viewVaultsButton-332 MuiButton-textPrimary-281 MuiButton-textSizeSmall-293 MuiButton-sizeSmall-299"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-279"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-122 MuiSvgIcon-colorPrimary-123"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-80 MuiTypography-subtitle2-92"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-334"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Dialog when there are rewards can go back from user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-26"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-28 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthXl-15 makeStyles-xlDialog-1 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-55 MuiPaper-rounded-29"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-79 makeStyles-title-344"
        >
          <h6
            class="MuiTypography-root-80 makeStyles-titleText-345 MuiTypography-h6-90"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-119 MuiIconButton-root-110 makeStyles-closeButton-351"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-118"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-122"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-422"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-131 makeStyles-content-346"
        >
          <div
            class="MuiGrid-root-133 makeStyles-contentGrid-363 MuiGrid-container-134 MuiGrid-spacing-xs-8-163"
          >
            <div
              class="MuiGrid-root-133 makeStyles-checkboxesSpacing-364 MuiGrid-item-135 MuiGrid-grid-xs-12-179 MuiGrid-grid-sm-6-187"
            >
              <div
                class="MuiGrid-root-133 makeStyles-contentPadding-365 MuiGrid-container-134 MuiGrid-direction-xs-column-137"
              >
                <div
                  class="MuiGrid-root-133 makeStyles-optionsContainer-366 MuiGrid-container-134 MuiGrid-item-135"
                >
                  <div
                    class="MuiGrid-root-133 makeStyles-claimRow-352 MuiGrid-item-135"
                  >
                    <div
                      class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-justify-content-xs-space-between-153"
                    >
                      <label
                        class="MuiFormControlLabel-root-369"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-119 MuiIconButton-root-110 PrivateSwitchBase-root-381 MuiCheckbox-root-375 MuiCheckbox-colorPrimary-379 PrivateSwitchBase-checked-382 MuiCheckbox-checked-376 MuiIconButton-colorPrimary-114"
                        >
                          <span
                            class="MuiIconButton-label-118"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-384"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-122"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-422"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-80 MuiFormControlLabel-label-374 MuiTypography-body1-82"
                        >
                          <p
                            class="MuiTypography-root-80 MuiTypography-body2-81"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-254 MuiBox-root-385"
                      >
                        <h6
                          class="MuiTypography-root-80 makeStyles-boldWeight-368 MuiTypography-h6-90"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-367"
                        >
                          <div
                            class="MuiBox-root-254 MuiBox-root-388"
                          >
                            <p
                              class="MuiTypography-root-80 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                            >
                              0.028019610295276968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-claimRow-352 MuiGrid-item-135"
                  >
                    <div
                      class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-justify-content-xs-space-between-153"
                    >
                      <label
                        class="MuiFormControlLabel-root-369"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-119 MuiIconButton-root-110 PrivateSwitchBase-root-381 MuiCheckbox-root-375 MuiCheckbox-colorPrimary-379 PrivateSwitchBase-checked-382 MuiCheckbox-checked-376 MuiIconButton-colorPrimary-114"
                        >
                          <span
                            class="MuiIconButton-label-118"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-384"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-122"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-422"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-80 MuiFormControlLabel-label-374 MuiTypography-body1-82"
                        >
                          <p
                            class="MuiTypography-root-80 MuiTypography-body2-81"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-254 MuiBox-root-390"
                      >
                        <h6
                          class="MuiTypography-root-80 makeStyles-boldWeight-368 MuiTypography-h6-90"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-367"
                        >
                          <div
                            class="MuiBox-root-254 MuiBox-root-393"
                          >
                            <p
                              class="MuiTypography-root-80 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                            >
                              0.024529508667974375
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-claimRow-352 MuiGrid-item-135"
                  >
                    <div
                      class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-justify-content-xs-space-between-153"
                    >
                      <label
                        class="MuiFormControlLabel-root-369"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-119 MuiIconButton-root-110 PrivateSwitchBase-root-381 MuiCheckbox-root-375 MuiCheckbox-colorPrimary-379 PrivateSwitchBase-checked-382 MuiCheckbox-checked-376 MuiIconButton-colorPrimary-114"
                        >
                          <span
                            class="MuiIconButton-label-118"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-384"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-122"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-422"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-80 MuiFormControlLabel-label-374 MuiTypography-body1-82"
                        >
                          <p
                            class="MuiTypography-root-80 MuiTypography-body2-81"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-254 MuiBox-root-394"
                      >
                        <h6
                          class="MuiTypography-root-80 makeStyles-boldWeight-368 MuiTypography-h6-90"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-367"
                        >
                          <div
                            class="MuiBox-root-254 MuiBox-root-397"
                          >
                            <p
                              class="MuiTypography-root-80 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                            >
                              0.039890071517351528
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-398 makeStyles-divider-360"
                />
                <div
                  class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-item-135 MuiGrid-align-items-xs-center-142 MuiGrid-justify-content-xs-space-between-153"
                >
                  <p
                    class="MuiTypography-root-80 MuiTypography-body2-81"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-254 MuiBox-root-407"
                  >
                    <h6
                      class="MuiTypography-root-80 makeStyles-titleText-345 MuiTypography-h6-90"
                    >
                      0.00
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-133 makeStyles-submitButton-359 MuiGrid-item-135"
                >
                  <button
                    class="MuiButtonBase-root-119 MuiButton-root-278 MuiButton-contained-286 MuiButton-containedPrimary-287 MuiButton-fullWidth-301"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-279"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-422"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-133 MuiGrid-item-135 MuiGrid-grid-xs-12-179 MuiGrid-grid-sm-6-187"
            >
              <div
                class="MuiGrid-root-133 makeStyles-moreRewardsSection-353"
              >
                <div
                  class="MuiGrid-root-133 makeStyles-moreRewardsInformation-354 MuiGrid-container-134 MuiGrid-direction-xs-column-137"
                >
                  <div
                    class="MuiGrid-root-133 MuiGrid-item-135"
                  >
                    <h6
                      class="MuiTypography-root-80 makeStyles-titleText-345 MuiTypography-h6-90"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-moreRewardsDescription-355 MuiGrid-item-135"
                  >
                    <p
                      class="MuiTypography-root-80 MuiTypography-body2-81"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-rewardsGuideLinkContainer-357 MuiGrid-item-135"
                  >
                    <a
                      class="MuiTypography-root-80 MuiLink-root-408 MuiLink-underlineHover-410 makeStyles-rewardsGuide-358 MuiTypography-colorPrimary-103"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-boostRewards-356 MuiGrid-item-135"
                  >
                    <button
                      class="MuiButtonBase-root-119 MuiButton-root-278 MuiButton-contained-286 MuiButton-containedPrimary-287 MuiButton-fullWidth-301"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-279"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-422"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Dialog when there are rewards displays claim options 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-26"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-28 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthXl-15 makeStyles-xlDialog-1 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-55 MuiPaper-rounded-29"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-79 makeStyles-title-56"
        >
          <h6
            class="MuiTypography-root-80 makeStyles-titleText-57 MuiTypography-h6-90"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-119 MuiIconButton-root-110 makeStyles-closeButton-63"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-118"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-122"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-313"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-131 makeStyles-content-58"
        >
          <div
            class="MuiGrid-root-133 makeStyles-contentGrid-75 MuiGrid-container-134 MuiGrid-spacing-xs-8-163"
          >
            <div
              class="MuiGrid-root-133 makeStyles-checkboxesSpacing-76 MuiGrid-item-135 MuiGrid-grid-xs-12-179 MuiGrid-grid-sm-6-187"
            >
              <div
                class="MuiGrid-root-133 makeStyles-contentPadding-77 MuiGrid-container-134 MuiGrid-direction-xs-column-137"
              >
                <div
                  class="MuiGrid-root-133 makeStyles-optionsContainer-78 MuiGrid-container-134 MuiGrid-item-135"
                >
                  <div
                    class="MuiGrid-root-133 makeStyles-claimRow-64 MuiGrid-item-135"
                  >
                    <div
                      class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-justify-content-xs-space-between-153"
                    >
                      <label
                        class="MuiFormControlLabel-root-238"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-119 MuiIconButton-root-110 PrivateSwitchBase-root-250 MuiCheckbox-root-244 MuiCheckbox-colorPrimary-248 PrivateSwitchBase-checked-251 MuiCheckbox-checked-245 MuiIconButton-colorPrimary-114"
                        >
                          <span
                            class="MuiIconButton-label-118"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-253"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-122"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-313"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-80 MuiFormControlLabel-label-243 MuiTypography-body1-82"
                        >
                          <p
                            class="MuiTypography-root-80 MuiTypography-body2-81"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-254 MuiBox-root-255"
                      >
                        <h6
                          class="MuiTypography-root-80 makeStyles-boldWeight-237 MuiTypography-h6-90"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-236"
                        >
                          <div
                            class="MuiBox-root-254 MuiBox-root-258"
                          >
                            <p
                              class="MuiTypography-root-80 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                            >
                              0.028019610295276968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-claimRow-64 MuiGrid-item-135"
                  >
                    <div
                      class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-justify-content-xs-space-between-153"
                    >
                      <label
                        class="MuiFormControlLabel-root-238"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-119 MuiIconButton-root-110 PrivateSwitchBase-root-250 MuiCheckbox-root-244 MuiCheckbox-colorPrimary-248 PrivateSwitchBase-checked-251 MuiCheckbox-checked-245 MuiIconButton-colorPrimary-114"
                        >
                          <span
                            class="MuiIconButton-label-118"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-253"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-122"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-313"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-80 MuiFormControlLabel-label-243 MuiTypography-body1-82"
                        >
                          <p
                            class="MuiTypography-root-80 MuiTypography-body2-81"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-254 MuiBox-root-260"
                      >
                        <h6
                          class="MuiTypography-root-80 makeStyles-boldWeight-237 MuiTypography-h6-90"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-236"
                        >
                          <div
                            class="MuiBox-root-254 MuiBox-root-263"
                          >
                            <p
                              class="MuiTypography-root-80 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                            >
                              0.024529508667974375
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-claimRow-64 MuiGrid-item-135"
                  >
                    <div
                      class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-justify-content-xs-space-between-153"
                    >
                      <label
                        class="MuiFormControlLabel-root-238"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-119 MuiIconButton-root-110 PrivateSwitchBase-root-250 MuiCheckbox-root-244 MuiCheckbox-colorPrimary-248 PrivateSwitchBase-checked-251 MuiCheckbox-checked-245 MuiIconButton-colorPrimary-114"
                        >
                          <span
                            class="MuiIconButton-label-118"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-253"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-122"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-313"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-80 MuiFormControlLabel-label-243 MuiTypography-body1-82"
                        >
                          <p
                            class="MuiTypography-root-80 MuiTypography-body2-81"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-254 MuiBox-root-264"
                      >
                        <h6
                          class="MuiTypography-root-80 makeStyles-boldWeight-237 MuiTypography-h6-90"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-236"
                        >
                          <div
                            class="MuiBox-root-254 MuiBox-root-267"
                          >
                            <p
                              class="MuiTypography-root-80 MuiTypography-body2-81 MuiTypography-colorTextSecondary-106"
                            >
                              0.039890071517351528
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-268 makeStyles-divider-72"
                />
                <div
                  class="MuiGrid-root-133 MuiGrid-container-134 MuiGrid-item-135 MuiGrid-align-items-xs-center-142 MuiGrid-justify-content-xs-space-between-153"
                >
                  <p
                    class="MuiTypography-root-80 MuiTypography-body2-81"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-254 MuiBox-root-277"
                  >
                    <h6
                      class="MuiTypography-root-80 makeStyles-titleText-57 MuiTypography-h6-90"
                    >
                      0.00
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-133 makeStyles-submitButton-71 MuiGrid-item-135"
                >
                  <button
                    class="MuiButtonBase-root-119 MuiButton-root-278 MuiButton-contained-286 MuiButton-containedPrimary-287 MuiButton-fullWidth-301"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-279"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-313"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-133 MuiGrid-item-135 MuiGrid-grid-xs-12-179 MuiGrid-grid-sm-6-187"
            >
              <div
                class="MuiGrid-root-133 makeStyles-moreRewardsSection-65"
              >
                <div
                  class="MuiGrid-root-133 makeStyles-moreRewardsInformation-66 MuiGrid-container-134 MuiGrid-direction-xs-column-137"
                >
                  <div
                    class="MuiGrid-root-133 MuiGrid-item-135"
                  >
                    <h6
                      class="MuiTypography-root-80 makeStyles-titleText-57 MuiTypography-h6-90"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-moreRewardsDescription-67 MuiGrid-item-135"
                  >
                    <p
                      class="MuiTypography-root-80 MuiTypography-body2-81"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-rewardsGuideLinkContainer-69 MuiGrid-item-135"
                  >
                    <a
                      class="MuiTypography-root-80 MuiLink-root-307 MuiLink-underlineHover-309 makeStyles-rewardsGuide-70 MuiTypography-colorPrimary-103"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-133 makeStyles-boostRewards-68 MuiGrid-item-135"
                  >
                    <button
                      class="MuiButtonBase-root-119 MuiButton-root-278 MuiButton-contained-286 MuiButton-containedPrimary-287 MuiButton-fullWidth-301"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-279"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-313"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Dialog when there are rewards displays rewards amount in rewards button 1`] = `
<div
  aria-hidden="true"
/>
`;

exports[`Rewards Dialog when there are rewards displays success dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-3"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-26"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-6 MuiDialog-scrollPaper-4"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claimed Rewards Overview"
        aria-labelledby="claimed-rewards"
        class="MuiPaper-root-28 MuiDialog-paper-7 MuiDialog-paperScrollPaper-8 MuiDialog-paperWidthXl-15 makeStyles-bigDialog-2 MuiDialog-paperFullWidth-16 MuiPaper-elevation24-55 MuiPaper-rounded-29"
        role="dialog"
      >
        <div
          class="MuiDialogContent-root-131 makeStyles-content-324"
        >
          <div
            class="MuiGrid-root-133 makeStyles-centeredText-330 MuiGrid-container-134 MuiGrid-direction-xs-column-137"
          >
            <button
              class="MuiButtonBase-root-119 MuiIconButton-root-110 makeStyles-closeButton-332"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-118"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-122"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-333"
              />
            </button>
            <div
              class="MuiGrid-root-133 makeStyles-successIconContainer-327 MuiGrid-item-135"
            >
              <img
                alt="rewards success icon"
                src="/assets/icons/rewards-claim-success.svg"
              />
            </div>
            <h4
              class="MuiTypography-root-80 makeStyles-rewardsTitle-328 MuiTypography-h4-88"
            >
              Rewards Claimed
            </h4>
            <h6
              class="MuiTypography-root-80 MuiTypography-subtitle2-92"
            >
              Rewards claimed for tokens:
            </h6>
            <h6
              class="MuiTypography-root-80 MuiTypography-subtitle2-92"
            >
              BADGER
            </h6>
            <h6
              class="MuiTypography-root-80 MuiTypography-subtitle2-92"
            >
              bveCVX
            </h6>
            <h6
              class="MuiTypography-root-80 MuiTypography-subtitle2-92"
            >
              bCVXCRV
            </h6>
            <button
              class="MuiButtonBase-root-119 MuiButton-root-278 MuiButton-contained-286 makeStyles-goBackButton-331 MuiButton-containedPrimary-287"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-279"
              >
                Go Back To My Rewards
              </span>
              <span
                class="MuiTouchRipple-root-333"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
